Added integration tests by using sbt scripted-plugin